tests-infrastructure/terraform/stress-test/deploy/frontend-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: kv-mall
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
